Bug 135478 - Calc changes columns when scrolling down macOS or touchpad related
Summary: Calc changes columns when scrolling down macOS or touchpad related
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.0.2 target:...
Keywords:
Depends on:
Blocks: Scrolling-PageUpDown
  Show dependency treegraph
 
Reported: 2020-08-05 21:27 UTC by Telesto
Modified: 2025-11-22 05:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (4.99 MB, video/quicktime)
2023-03-23 06:33 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-05 21:27:07 UTC
Description:
Calc changes columns when scrolling down MacOS or touchpad related, I think

Steps to Reproduce:
1. Open attachment 162954 [details]
2. Sheet dotazník
3. Scroll vertical right, so column C is first
4. Scroll down with touchpad

Actual Results:
Column changes from C to D to F. when scrolling down

Expected Results:
Straight line


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in 
Version: 7.0.0.2
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded

No repro on Windows using mouse and scroll wheel
Comment 1 Telesto 2020-08-05 21:29:18 UTC
Also in
Version: 4.3.7.2 MacOS
Build ID: 8a35821d8636a03b8bf4e15b48f59794652c68ba
Comment 2 Marina Bakutina 2021-07-24 18:56:54 UTC
not repro in Windows 10
Version: 7.3.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: ee5a1b61b4460b965413a3f7ed4f9152322f1c02
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 3 steve 2021-08-09 13:46:23 UTC
confirmed in Version: 7.2.0.2 / LibreOffice Community
Build ID: 614be4f5c67816389257027dc5e56c801a547089
CPU threads: 8; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 4 Patrick (volunteer) 2023-03-21 00:23:15 UTC
I cannot reproduce this bug in LibreOffice 7.5.1.2:

Version: 7.5.1.2 (AARCH64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Mac OS X 12.6.3; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 steve 2023-03-21 10:53:11 UTC
Me neither. @Telesto: can you verify this is fixed for your as well in a recent release?
Comment 6 Telesto 2023-03-23 06:33:10 UTC
Created attachment 186148 [details]
Screencast

Scrolling improved, but swiping up after end of scrolling range is reached still converting the swipe direction. See screencast

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1cfeb4bd8ce7f7727a81136bd3e2d6ebea976895
CPU threads: 8; OS: Mac OS X 12.6.3; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 7 steve 2023-03-23 09:09:53 UTC
Confirming in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1cfeb4bd8ce7f7727a81136bd3e2d6ebea976895
CPU threads: 8; OS: Mac OS X 13.2.1; UI render: Skia/Metal; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

Reproduce: scroll down vertically and observe how calc switch to another column.
Comment 8 Commit Notification 2023-12-26 19:03:37 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7af5df1d9fc472dc3a770fbff736eafa99d46bde

tdf#135478 Reduce sensitivity of horizontal scrollwheel

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Patrick (volunteer) 2023-12-26 19:30:31 UTC
I have committed my fix for this bug and it will be included in tomorrow's (27 December 2023) nightly master build:

https://dev-builds.libreoffice.org/daily/master/current.html

Note: my fix still allows a little horizontal movement through when you are swiping at a slight angle from vertical, but with the fix what should happen is that each unit of horizontal movement in a native swipe event now only moves 1/8 of the default cell width instead of a full default cell width.

For me this reduces the horizontal movement to only a single column left or right and that doesn't occur until I start swiping at more than a 10 degree or so angle left or right from vertical.
Comment 10 Commit Notification 2024-01-05 14:49:13 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/24effe0edd9ae1ea9e4dd8e0bdabd5f25e1b9a68

tdf#135478 Reduce sensitivity of horizontal scrollwheel

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-01-05 15:00:20 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/48c13e2cefb0251d9ca975f4e4f39af3d8adec6f

tdf#135478 Reduce sensitivity of horizontal scrollwheel

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.