sc/source/ui/inc/tabview.hxx
@@ -217,6 +217,8 @@ private:
 
     double              mfLastZoomScale = 0;
     double              mfAccumulatedZoom = 0;
+    tools::Long         mnPendingaHScrollLeftDelta = 0;
+    tools::Long         mnPendingaHScrollRightDelta = 0;
 
     void            Init();
 
